# dfttk

./: .gitattributes  .gitignore  .readthedocs.yaml  LICENSE  README.md  TODO  cstdn.py  cstdn_luke.py  cstdn_old.py  dfttk.configuration.rst  encut_conv_example.py  env.yml  environment.yml  eos.ipynb  eos.py  eos_fit.py  eos_fit_example.py  ev_curves_example.py  extract_config_data.py  extract_config_mv_data.py  kpoints_conv.py  mag_data.ipynb  phonons_parallel.py  plot_multiple_ev_curves.py  prep_for_vasp.ipynb  prep_for_vasp.py  pyproject.toml  run_phonons_RC  setup.py  super_cell_generation.py  supercell_generation.py  test.ipynb  tutorial.ipynb  vol_series.py  workflows.py
.github/workflows/: docs.yml  hello.yaml  publish-to-test-pypi.yml  test.yaml
dfttk/: aggregate_extraction.py  config.py  configuration.py  data_extraction.py  debye.py  debye_data.py  dfttk.code-workspace  eos_fit.py  eos_functions.py  ev_curve_data.py  magmom_dict.yaml  magnetism.py  mongo.py  phonon_data.py  phonons.py  potcar_dict.yaml  qha_yphon.py  quasi_harmonic.py  quasi_harmonic_data.py  quasi_harmonic_functions.py  thermal_electronic.py  thermal_electronic_data.py  vasp_input.py  workflows.py
dfttk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
dfttk/atat/: caller.py  fxvector.h  io.py  magnetic.py
dfttk/debye/: debye_data.py  debye_gruneisen.py  functions.py
dfttk/eos/: fit.py  (+2 more)
dfttk2.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: api.rst  api_post_processing.rst  conf.py  dfttk.eos.rst  dfttk.rst  dfttk.vasp_input.rst  dfttk.workflows.rst  home.rst  index.rst  installation.rst  modules.rst  tutorials.rst
scripts/: data.json  data.yaml  encut_conv_example.py  eos.ipynb  eos_fit_example.py  equivalent_orderings.ipynb  ev_curves_example.py  extract_config_data.py  kpoints_conv_example.py  mag_data.ipynb  phonons_parallel.py  plotting.ipynb  prep_for_vasp.ipynb  prep_for_vasp.py  run_phonons.py  supercell_generation.py  three_step_relaxation_example.py
src/: eos_fit.py  workflows.py
tests/: expected_debye_entropy.json  expected_debye_free_energy.json  expected_debye_heat_capacity.json  expected_ev_curves_incars.json  expected_phonons_entropy.json  expected_phonons_entropy_fit.json  expected_phonons_heat_capacity.json  expected_phonons_heat_capacity_fit.json  expected_phonons_helmholtz_energy.json  expected_phonons_helmholtz_energy_fit.json  expected_phonons_internal_energy.json  test_aggregate_extraction.py  test_config.py  test_configuration.py  test_data_extraction.py  test_debye.py  test_eos.py  test_magnetism.py  test_phonon.py  test_quasi_harmonic.py  test_thermal_electronic.py
(+861 files in other folders)
