[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dfttk"
version = "0.0.0"
authors = [
  { name="Luke A. Myers", email="lam7027@psu.edu" },
  { name="Nigel Lee En Hew", email="njh5724@psu.edu"}
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Density Functional Theory",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
readme = "README.md"

requires-python = ">=3.10"
dependencies = [
    "pymatgen>=2024.2.20",
    "numpy>=1.26,<2.0.0",
    "pandas>=2.1.4",
    "matplotlib>=3.8.2",
    "plotly>=5.18.0",
    "scipy>=1.11.4",
    "custodian>=2023.10.9",
    "natsort>=8.4.0",
    "distinctipy>=1.3.4",
    "pymongo>=4.4",
]

keywords = ["VASP", "automation", "thermodynamics", "dfttk", "DFT", "materials", "science", "MongoDB"]

[project.urls]
"Homepage" = "https://github.com/PhasesResearchLab/dfttk"
